--- a/Readers/ZumoCommunity.ConfigurationAPI.Readers.Common/ZumoCommunity.ConfigurationAPI.Readers.Common.csproj
+++ b/Readers/ZumoCommunity.ConfigurationAPI.Readers.Common/ZumoCommunity.ConfigurationAPI.Readers.Common.csproj
@@ -47,6 +47,11 @@
       <Name>ZumoCommunity.ConfigurationAPI.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ZumoCommunity.ConfigurationReader.Common.nuspec">
+      <SubType>Designer</SubType>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
