--- a/Tests/ZumoCommunity.ConfigurationAPI.Tests/ZumoCommunity.ConfigurationAPI.Tests.csproj
+++ b/Tests/ZumoCommunity.ConfigurationAPI.Tests/ZumoCommunity.ConfigurationAPI.Tests.csproj
@@ -39,6 +39,14 @@
       <HintPath>..\..\packages\Autofac.4.2.1\lib\net45\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Moq, Version=4.5.30.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Moq.4.5.30\lib\net45\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -47,8 +55,8 @@
       <HintPath>..\..\packages\NSubstitute.1.10.0.0\lib\net45\NSubstitute.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=3.6.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NUnit.3.6.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="SqlLocalDb, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -103,6 +111,10 @@
     <ProjectReference Include="..\..\Readers\ZumoCommunity.ConfigurationAPI.Readers.Database\ZumoCommunity.ConfigurationAPI.Readers.Database.csproj">
       <Project>{620cab34-ec90-4c9e-867e-26fb4fad9fca}</Project>
       <Name>ZumoCommunity.ConfigurationAPI.Readers.Database</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Readers\ZumoCommunity.ConfigurationAPI.Readers.Http\ZumoCommunity.ConfigurationAPI.Readers.Http.csproj">
+      <Project>{0d07a775-593d-428b-a0a0-d495ef5560e4}</Project>
+      <Name>ZumoCommunity.ConfigurationAPI.Readers.Http</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Readers\ZumoCommunity.ConfigurationAPI.Readers.TableStorage\ZumoCommunity.ConfigurationAPI.Readers.TableStorage.csproj">
       <Project>{fdf1919e-2f58-4032-b9b7-fe001f58087d}</Project>
